Intial upload to GitHub

--- a/MagicPacket_Console/MagicPacket_Console.csproj
+++ b/MagicPacket_Console/MagicPacket_Console.csproj
@@ -43,9 +43,16 @@
   <ItemGroup>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Wake.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\MagicPacket_Shared\MagicPacket_Shared.csproj">
+      <Project>{cb4e2044-5532-47b4-b8bc-9fe638956a27}</Project>
+      <Name>MagicPacket_Shared</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
